--- a/WebApp/Pages/Account/Register.cshtml
+++ b/WebApp/Pages/Account/Register.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model WebApp.Pages.RegisterModel
+@model WebApp.Pages.Account.RegisterModel
 @{
 }
 
@@ -10,21 +10,21 @@
         <div class="text-danger" asp-validation-summary="All"></div>
         <div class="row mb-3">
             <div class="col-2">
-                <label asp-for="RegisterViewModel.Email"></label>
+                <label asp-for="ViewModel.Email"></label>
             </div>
             <div class="col-5">
-                <input type="text" asp-for="RegisterViewModel.Email" class="form-control" />
-                <span class="text-danger" asp-validation-for="RegisterViewModel.Email"></span>
+                <input type="text" asp-for="ViewModel.Email" class="form-control" />
+                <span class="text-danger" asp-validation-for="ViewModel.Email"></span>
             </div>
         </div>
 
         <div class="row mb-3">
             <div class="col-2">
-                <label asp-for="RegisterViewModel.Password"></label>
+                <label asp-for="ViewModel.Password"></label>
             </div>
             <div class="col-5">
-                <input type="password" asp-for="RegisterViewModel.Password" class="form-control" />
-                <span class="text-danger" asp-validation-for="RegisterViewModel.Password"></span>
+                <input type="password" asp-for="ViewModel.Password" class="form-control" />
+                <span class="text-danger" asp-validation-for="ViewModel.Password"></span>
             </div>
         </div>
 
